--- a/index.html
+++ b/index.html
@@ -1,67 +1,120 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>고양이 가라사대</title>
-  </head>
-  <style>
+</head>
+<style>
     body {
-      text-align: center;
+        text-align: center;
     }
+
     .main-card button {
-      position: relative;
-      left: -45px;
-      bottom: 15px;
+        position: relative;
+        left: -45px;
+        bottom: 15px;
     }
+
     .favorites {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 15px;
     }
-    .favorites img {
-      width: 150px;
+
+    /*.favorites img {*/
+    /*  width: 150px;*/
+    /*}*/
+</style>
+<body>
+<div id="app"></div>
+<!-- -->
+<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+<script type="text/babel">
+    function CatItem(props) {
+        return (
+            <li>
+                <img src={props.img} style={{width: "150px", border: "1px solid red"}}/>
+            </li>
+        );
     }
-  </style>
-  <body>
-    <h1>1번째 고양이 가라사대</h1>
-    <form>
-      <input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
-      <button type="submit">생성</button>
-    </form>
-    <div class="main-card">
-      <img
-        src="https://cataas.com/cat/60b73094e04e18001194a309/says/react"
-        alt="고양이"
-        width="400"
-      />
-      <button>🤍</button>
-    </div>
-    <ul class="favorites">
-      <li>
-        <img
-          src="https://cataas.com/cat/60b73094e04e18001194a309/says/react"
-          alt="고양이"
-        />
-      </li>
-      <li>
-        <img
-          src="https://cataas.com/cat/60b73094e04e18001194a309/says/react"
-          alt="고양이"
-        />
-      </li>
-      <li>
-        <img
-          src="https://cataas.com/cat/60b73094e04e18001194a309/says/react"
-          alt="고양이"
-        />
-      </li>
-    </ul>
-    <script>
-      console.log("야옹");
-    </script>
-  </body>
+
+    function Favorites() {
+        return (
+            <ul className="favorites">
+                <CatItem img="https://cataas.com/cat/60b73094e04e18001194a309/says/react" title="이미지1"/>
+                <CatItem img="https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn" title="이미지2"/>
+            </ul>
+        );
+    }
+
+    const MainCard = ({img}) => {
+        function handleHeartClick() {
+            console.log('하트 눌렀음.');
+        }
+
+        function handleMouseOver() {
+            console.log('하트 스쳐 지나감.');
+        }
+
+        return (
+            <div className="main-card">
+                <img
+                    src={img}
+                    alt="고양이"
+                    width="400"
+                />
+                <button onClick={handleHeartClick} onMouseOver={handleMouseOver}>🤍</button>
+            </div>
+        );
+    };
+
+    const Title = (props) => {
+        return (
+            <h1>{props.children}</h1>
+        )
+    };
+
+    const Form = () => {
+        const [counter, setCounter] = React.useState(1);
+        function handleFormSubmit(event) {
+            event.preventDefault();
+            console.log("카운터", counter);
+            setCounter(counter + 1);
+        }
+
+        return (
+            <form onSubmit={handleFormSubmit}>
+                <input
+                    type="text"
+                    name="name"
+                    placeholder="영어 대사를 입력해주세요"
+                />
+                <button type="submit">생성</button>
+            </form>
+        )
+    };
+
+    const App = () => {
+        return (
+            <div>
+                <Title>1번째 고양이 가라사대</Title>
+                <Form/>
+                <MainCard img="https://cataas.com/cat/595f280b557291a9750ebf65/says/JavaScript"/>
+                <Favorites/>
+            </div>
+        );
+    };
+
+    const 여기다그려 = document.querySelector('#app');
+    // ReactDOM.render(favorites, 여기다그려);
+    ReactDOM.render(<App />, 여기다그려);
+
+</script>
+</body>
 </html>
