--- a/index.html
+++ b/index.html
@@ -36,56 +36,43 @@
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 <script type="text/babel">
-    function CatItem(props) {
-        return (
-            <li>
-                <img src={props.img} style={{width: "150px", border: "1px solid red"}}/>
-            </li>
-        );
-    }
-
-    function Favorites() {
-        return (
-            <ul className="favorites">
-                <CatItem img="https://cataas.com/cat/60b73094e04e18001194a309/says/react" title="이미지1"/>
-                <CatItem img="https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn" title="이미지2"/>
-            </ul>
-        );
-    }
-
-    const MainCard = ({img}) => {
-        function handleHeartClick() {
-            console.log('하트 눌렀음.');
-        }
-
-        function handleMouseOver() {
-            console.log('하트 스쳐 지나감.');
-        }
-
-        return (
-            <div className="main-card">
-                <img
-                    src={img}
-                    alt="고양이"
-                    width="400"
-                />
-                <button onClick={handleHeartClick} onMouseOver={handleMouseOver}>🤍</button>
-            </div>
-        );
+    const jsonLocalStorage = {
+        setItem: (key, value) => {
+            localStorage.setItem(key, JSON.stringify(value));
+        },
+        getItem: (key) => {
+            return JSON.parse(localStorage.getItem(key));
+        },
     };
 
     const Title = (props) => {
-        return (
-            <h1>{props.children}</h1>
-        )
+        return <h1>{props.children}</h1>;
     };
 
-    const Form = () => {
-        const [counter, setCounter] = React.useState(1);
-        function handleFormSubmit(event) {
-            event.preventDefault();
-            console.log("카운터", counter);
-            setCounter(counter + 1);
+    const Form = ({updateMainCat}) => {
+        const includesHangul = (text) => /[ㄱ-ㅎ|ㅏ-ㅣ|가-힣]/i.test(text);
+        const [value, setValue] = React.useState('');
+        const [errorMessage, setErrorMessage] = React.useState('');
+
+        function handleInputChange (e) {
+            const userValue = e.target.value;
+            if (includesHangul(userValue)) {
+                setErrorMessage('한글은 입력할 수 없습니다.');
+                return;
+            } else {
+                setErrorMessage('');
+            }
+            setValue(userValue.toUpperCase());
+        }
+
+        function handleFormSubmit (e) {
+            e.preventDefault();
+            setErrorMessage('');
+            if (value === '') {
+                setErrorMessage('빈 값으로 만들 수 없습니다.');
+                return;
+            }
+            updateMainCat();
         }
 
         return (
@@ -94,25 +81,84 @@
                     type="text"
                     name="name"
                     placeholder="영어 대사를 입력해주세요"
+                    value={value}
+                    onChange={handleInputChange}
                 />
                 <button type="submit">생성</button>
+                <p style={{ color: "red" }} >{errorMessage}</p>
             </form>
         )
     };
 
+    function CatItem(props) {
+        return (
+            <li>
+                <img src={props.img} style={{width: "150px", border: "1px solid red"}}/>
+            </li>
+        );
+    }
+
+    function Favorites({favorites}) {
+        return (
+            <ul className="favorites">
+                {favorites.map(cat => (
+                    <CatItem img={cat} key={cat} />
+                ))}
+            </ul>
+        );
+    }
+
+    const MainCard = ({img, onHeartClick}) => {
+        return (
+            <div className="main-card">
+                <img
+                    src={img}
+                    alt="고양이"
+                    width="400"
+                />
+                <button onClick={onHeartClick}>🤍</button>
+            </div>
+        );
+    };
+
+
     const App = () => {
+        const CAT1 = "https://cataas.com/cat/60b73094e04e18001194a309/says/react";
+        const CAT2 = "https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn";
+        const CAT3 = "https://cataas.com/cat/595f280b557291a9750ebf65/says/JavaScript";
+
+        const [counter, setCounter] = React.useState(
+            jsonLocalStorage.getItem('counter')
+        );
+        const [mainCat, setMainCat] = React.useState(CAT1);
+        const [favorites, setFavorites] = React.useState(
+            jsonLocalStorage.getItem('favorites') || []
+        );
+
+        function updateMainCat() {
+            setMainCat(CAT2);
+            const nextCounter = counter + 1;
+            setCounter(nextCounter);
+            jsonLocalStorage.setItem('counter', nextCounter);
+        }
+
+        function handleHeartClick() {
+            const nextFavorites = [...favorites, CAT3];
+            setFavorites(nextFavorites);
+            jsonLocalStorage.setItem('favorites', nextFavorites);
+        }
+
         return (
             <div>
-                <Title>1번째 고양이 가라사대</Title>
-                <Form/>
-                <MainCard img="https://cataas.com/cat/595f280b557291a9750ebf65/says/JavaScript"/>
-                <Favorites/>
+                <Title>{counter}번째 고양이 가라사대</Title>
+                <Form updateMainCat={updateMainCat} />
+                <MainCard img={mainCat} onHeartClick={handleHeartClick}/>
+                <Favorites favorites={favorites}/>
             </div>
         );
     };
 
     const 여기다그려 = document.querySelector('#app');
-    // ReactDOM.render(favorites, 여기다그려);
     ReactDOM.render(<App />, 여기다그려);
 
 </script>
